--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -84,9 +84,7 @@ a {
 
     overflow-wrap: break-word;
     word-wrap: break-word;
-    -ms-word-break: break-all;
-    word-break: break-all;
-    word-break: break-all;
+    word-break: break-word;
     -ms-hyphens: auto;
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
@@ -398,6 +396,7 @@ a:visited {
     margin: 10px 0;
     border-radius: 10px;
     width: 31%;
+    align-items: center;
 }
 
 .block > i {
@@ -478,6 +477,10 @@ a:visited {
 
     .block > div, .list_content > div > div {
         width: 90%;
+    }
+
+    .block > i {
+        margin-bottom: 0;
     }
 }
 
@@ -1358,6 +1361,25 @@ h3 {
     border-radius: 5px;
 }
 
+.top_airport_info {
+    display: flex;
+}
+
+.sharing {
+    display: flex;
+    flex-direction: row;
+}
+
+.sharing > div {
+    margin-left: 10px;
+}
+
+.ifc_share > svg {
+    width: 21px;
+    height: 21px;
+    transform: scale(1.3);
+}
+
 .cookieDiv {
     position: fixed;
     top: 0;
@@ -1398,6 +1420,7 @@ h3 {
 
 .searchbar {
     width: 100%;
+    position: relative;
 }
 
 .input_bar > label {
@@ -1414,7 +1437,6 @@ h3 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    left: 15px;
     width: 46.6%;
 
     border-bottom: solid #d6d6d6 1px;
@@ -1426,8 +1448,7 @@ h3 {
 
 .searchbar > .search_suggestions {
     position: absolute;
-    left: 15px;
-    top: 43px;
+    top: 40px;
     z-index: 3;
     padding: 15px;
     width: 46.6%;
@@ -1455,9 +1476,28 @@ h3 {
 @media all and (max-width: 765px) {
     .searchbar > .input_bar, .searchbar > .search_suggestions {
         margin: 0 auto;
-        width: calc(100% - 30px);
+        width: 95%;
     }
 }
+
+@media all and (max-width: 440px) {
+    .searchbar > .input_bar, .searchbar > .search_suggestions {
+        width: 100%;
+    }
+
+    .top_airport_info {
+       flex-direction: column;
+    }
+
+    .sharing {
+        justify-content: space-between;
+    }
+
+    .sharing > div {
+        margin-left: 0;
+    }
+}
+
 
 .input_center {
     position: relative !important;
@@ -1551,6 +1591,17 @@ input.input_center {
 .flex_buttons > :nth-child(1) {
     margin-right: 15px;
     background-color: #0072ff;
+}
+
+.unsupported {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.unsupported > .info {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 @media all and (max-width: 680px) {
