--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1517,6 +1517,23 @@ input.input_center {
     overflow: hidden;
 }
 
+#events_map {
+    height: 350px;
+}
+
+#marker {
+    background-image: url('https://docs.mapbox.com/mapbox-gl-js/assets/washington-monument.jpg');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.mapboxgl-popup {
+    max-width: 200px;
+}
+
 
 .terms > div, .terms > div > div, .terms > div > div > div, .terms > div > div > div > div {
     margin-bottom: 30px;
@@ -1591,6 +1608,22 @@ input.input_center {
 .flex_buttons > :nth-child(1) {
     margin-right: 15px;
     background-color: #0072ff;
+}
+
+.occupied_gate {
+    display: block;
+    border: none;
+    font-size: 15px;
+    color: rgb(194, 0, 0);
+}
+
+.occupied_gate.byuser {
+    color: rgb(108, 186, 0);
+    font-size: 13px;
+    border: solid 3px;
+    padding: 6px;
+    border-radius: 50%;
+    background-color: white;
 }
 
 .unsupported {
